Half of messaging functionality, TODO: send by department, improve combobox style in message form